Elementary JPMS module access checks
Will only be available in the jdk11 preview nightly builds of the compiler,
unlock with -Yjpms.

```
class C {
  sun.misc.Unsafe.getUnsafe
}
```

```
$ scalac -Yjpms --module-path . /Users/adriaan/Library/Preferences/IdeaIC2018.2/scratches/scratch_49.scala

/Users/adriaan/Library/Preferences/IdeaIC2018.2/scratches/scratch_49.scala:2: error: class Unsafe in package misc cannot be accessed in package sun.misc
  sun.misc.Unsafe.getUnsafe
           ^
one error found
```